# extract_tool

./: .gitignore  README.md  _diag_import_api.py  _diag_sax_sheet.py  _diag_weight_match.py  api_server.py  country_match_rules.json  extract.py  extract_pricing_details copy.py  extract_pricing_details.py  extract_pricing_details_v2.py  extract_pricing_details_v3.py  grade_quote_extractor_v1.py  grade_quote_extractor_v2.py  main.py  prebuild_batch_outputs.py  pricing_table_extractor.py  pyproject.toml  query_product_code.py  start.bat
scripts/: run_api.py  run_scheduler.py
src/: imap_attachment_fetcher.py
src/myproject/: __init__.py
src/myproject/api/: app.py
src/myproject/cron/: scheduler.py
src/myproject/cron/jobs/: __init__.py  mail_attachment_fetch.py
src/myproject/scripts/: __init__.py  prebuild_batch_outputs.py  query_product_code.py
src/myproject/services/: extract_pricing_details.py  grade_quote_extractor.py
