[project]
name = "ai-price"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.116.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pywin32>=306; sys_platform == 'win32'",
    "uvicorn>=0.35.0",
]
